--- a/frontend/perfil/index.html
+++ b/frontend/perfil/index.html
@@ -54,76 +54,78 @@
                         <div class="d-flex justify-content-center">
                             <h1 class="title">Meu Perfil</h1>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-12 col-sm-12 d-flex align-items-center order-lg-1 order-2">
-                                <div class="w-100 px-5 pt-5">
-                                    <div class="row">
-                                        <div class="col-lg-6 col-sm-12">
-                                            <div class="my-4">
-                                                <label for="nome">Nome completo</label>
-                                                <input id="nome" name="nome" type="text" placeholder="Digite seu novo nome" class="form-control">
-                                            </div>
-                                            <div class="my-4">
-                                                <label for="email">E-mail</label>
-                                                <input id="email" name="email" type="text" placeholder="Digite seu novo e-mail" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-6 col-sm-12">
-                                            <div class="my-4">
-                                                <label for="password">Senha</label>
-                                                <div class="input-group">
-                                                    <input id="password" name="password" type="password" placeholder="Digite sua nova senha" class="form-control">
-                                                    <div class="input-group-append">
-                                                        <button type="button" id="show-password" class="btn btn-outline-secondary">
-                                                            <i id="show-password-icon" class="bi bi-eye"></i>
-                                                        </button>
-                                                    </div>
+                        <form id="edit-form" method="post">
+                            <div class="row">
+                                <div class="col-lg-12 col-sm-12 d-flex align-items-center order-lg-1 order-2">
+                                    <div class="w-100 px-5 pt-5">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-sm-12">
+                                                <div class="my-4">
+                                                    <label for="nome">Nome completo</label>
+                                                    <input id="nome" name="nome" type="text" placeholder="Digite seu novo nome" class="form-control">
+                                                </div>
+                                                <div class="my-4">
+                                                    <label for="email">E-mail</label>
+                                                    <input id="email" name="email" type="text" placeholder="Digite seu novo e-mail" class="form-control">
                                                 </div>
                                             </div>
-                                            <div class="my-4">
-                                                <label for="data">Data de nascimento</label>
-                                                <input id="data" name="data" type="date" class="form-control">
+                                            <div class="col-lg-6 col-sm-12">
+                                                <div class="my-4">
+                                                    <label for="password">Senha</label>
+                                                    <div class="input-group">
+                                                        <input id="password" name="password" type="password" placeholder="Digite sua nova senha" class="form-control">
+                                                        <div class="input-group-append">
+                                                            <button type="button" id="show-password" class="btn btn-outline-secondary">
+                                                                <i id="show-password-icon" class="bi bi-eye"></i>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="my-4">
+                                                    <label for="data">Data de nascimento</label>
+                                                    <input id="data" name="data" type="date" class="form-control">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="mb-4">
+                                            <label for="data">Genero:</label>
+                                            <div class="d-flex gap-3">
+                                                <div>
+                                                    <input type="radio" id="masculino" name="genero" value="masculino">
+                                                    <label for="masculino">Masculino</label><br>
+                                                </div>
+                                                <div>
+                                                    <input type="radio" id="feminino" name="genero" value="feminino">
+                                                    <label for="feminino">Feminino</label><br>
+                                                </div>
+                                                <div>
+                                                    <input type="radio" id="outro" name="genero" value="outro">
+                                                    <label for="outro">Outro</label>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                    
-                                    <div class="mb-4">
-                                        <label for="data">Genero:</label>
-                                        <div class="d-flex gap-3">
-                                            <div>
-                                                <input type="radio" id="masculino" name="genero" value="masculino">
-                                                <label for="masculino">Masculino</label><br>
+                                </div>
+                                <div class="col-lg-12 col-sm-12 order-3">
+                                    <div class="pb-5">
+                                        <div class="row gy-4">
+                                            <div class="col-lg-7 col-sm-12">
+                                                <div class="buttons-flex d-flex justify-content-between px-5 gap-3">
+                                                    <button type="button" class="btn button-gray-outline w-25 fw-bold" data-bs-toggle="modal" data-bs-target="#exampleModal">Excluir</button>
+                                                    <button type="submit" class="btn button-green w-75 fw-bold">Salvar</button>
+                                                </div>
                                             </div>
-                                            <div>
-                                                <input type="radio" id="feminino" name="genero" value="feminino">
-                                                <label for="feminino">Feminino</label><br>
-                                            </div>
-                                            <div>
-                                                <input type="radio" id="outro" name="genero" value="outro">
-                                                <label for="outro">Outro</label>
+                                            <div class="col-lg-5 col-sm-12 d-flex justify-content-end align-items-center">
+                                                <div class="px-5">
+                                                    <button type="button" id="logout" class="btn fw-bold text-secondary"><i class="bi bi-box-arrow-left"></i> Logout</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-12 col-sm-12 order-3">
-                                <div class="pb-5">
-                                    <div class="row gy-4">
-                                        <div class="col-lg-7 col-sm-12">
-                                            <div class="d-flex justify-content-between px-5 gap-3">
-                                                <button type="button" class="btn button-gray-outline w-25 fw-bold" data-bs-toggle="modal" data-bs-target="#exampleModal">Excluir</button>
-                                                <button type="button" class="btn button-green w-75 fw-bold">Salvar</button>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-5 col-sm-12 d-flex justify-content-end align-items-center">
-                                            <div class="px-5">
-                                                <button type="button" id="logout" class="btn fw-bold text-secondary"><i class="bi bi-box-arrow-left"></i> Logout</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -151,8 +153,11 @@
     </div>
 
     <script src="../assets/js/verifyLogin.js"></script>
+    <script src="../assets/js/loadUser.js"></script>
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/logout.js"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/deleteAccount.js"></script>
+    <script src="../assets/js/userEdit.js"></script>
 </body>
 </html>
